# rusc_tilde

./: .gitignore  CMakeLists.txt  LICENSE  README.md
clap_tilde/: CMakeLists.txt  clap_tilde.cpp
docs/: clap~.maxref.xml  rusc~.maxref.xml
media/: clap_tilde-test-patch_demo.maxpat  rusc_tilde-test-patch_demo.maxpat
rusc_tilde/: CMakeLists.txt  rusc_tilde.cpp
scripts/: export_clap.py  export_clap_onnx.py
src/: CMakeLists.txt  bpe_tokenizer.h  clap_classifier.h  clap_model.h  clap_model_onnx.h
